# fastapi-tdd

./: .gitignore  README.md  docker-compose.yaml
.github/workflows/: main.yaml
project/: Dockerfile  Dockerfile.prod  Pipfile  docker-compose.yml  entrypoint.sh  pyproject.toml  release.sh  requirements.txt
project/app/: .gitignore  .pre-commit-config.yaml  config.py  db.py  main.py  summarizer.py
project/app/api/: crud.py  ping.py  summaries.py
project/app/models/: pydantic.py  tortoise.py
project/tests/: conftest.py  pytest.ini  test_ping.py  test_summaries.py
project/tests/functional/: test_summaries.py
project/tests/unit/: test_summaries_unit.py
