[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Evan Baird <mrcartoonster@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.61.1"}
asyncpg = "^0.21.0"
tortoise-orm = "^0.16.16"
requests = "^2.24.0"
httpx = "^0.16.1"
pytest = "^6.1.1"
pytest-clarity = "^0.3.0-alpha.0"
pytest-instafail = "^0.4.2"
pytest-pythonpath = "^0.7.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"
ipython = "^7.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
