[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Evan Baird <mrcartoonster@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.61.1"}
asyncpg = "^0.21.0"
tortoise-orm = "^0.16.16"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"
ipython = "^7.18.1"
pytest = "^6.1.1"
pytest-emoji = "^0.2.0"
pytest-instafail = "^0.4.2"
pytest-cov = "^2.10.1"
pytest-html = "^2.1.1"
pytest-clarity = "^0.3.0-alpha.0"
pytest-picked = "^0.4.4"
pytest-pythonpath = "^0.7.3"
httpx = "^0.16.1"
vcrpy = "^4.1.1"
pytest-vcr = "^1.0.2"

[tool.pytest.ini_options]
addopts = "-rssxX -l -p no:warnings --tb=short --strict --emoji -vv --diff-type=split --instafail"
xfail_strict = "True"
markers = [
  "smoke",
  "fire",
  "verify"
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
